WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99406
Layout Test fast/text/justify-ideograph-leading-expansion.html is failing an assertion chromium mac
https://bugs.webkit.org/show_bug.cgi?id=99406
Summary
Layout Test fast/text/justify-ideograph-leading-expansion.html is failing an ...
Shinya Kawanaka
Reported
2012-10-15 19:15:09 PDT
The following layout test is failing on Chromium Mac. fast/text/justify-ideograph-leading-expansion.html
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Ftext%2Fjustify-ideograph-leading-expansion.html
Attachments
Never apply font transforms to 1-character runs
(2.34 KB, patch)
2012-10-15 20:43 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-10-15 20:05:59 PDT
(In reply to
comment #0
)
> The following layout test is failing on Chromium Mac. > > fast/text/justify-ideograph-leading-expansion.html > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Ftext%2Fjustify-ideograph-leading-expansion.html
As far as I can tell from the link, this is an assertion failure in a debug build.
mitz
Comment 2
2012-10-15 20:10:56 PDT
(and in case it wasn’t clear: I am looking into this right now)
mitz
Comment 3
2012-10-15 20:43:42 PDT
Created
attachment 168844
[details]
Never apply font transforms to 1-character runs
mitz
Comment 4
2012-10-15 20:47:44 PDT
Fixed in <
http://trac.webkit.org/r131405
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug