Layout Test fast/text/justify-ideograph-leading-expansion.html is failing an assertion chromium mac https://bugs.webkit.org/show_bug.cgi?id=99406

Reviewed by Darin Adler.

* platform/graphics/WidthIterator.cpp:
* platform/graphics/WidthIterator.h:
(WebCore::WidthIterator::shouldApplyFontTransforms): Changed to return false if the run is
shorter than 2 characters. 1-character are invariant under font transforms, and therefore
Font::codePath() sends them through WidthIterator even on platforms where WidthIterator
does not support kerning and ligatures.



Canonical link: https://commits.webkit.org/117370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131405 268f45cc-cd09-0410-ab3c-d52691b4dbfc